--- a/templates/components/base.html
+++ b/templates/components/base.html
@@ -1,8 +1,29 @@
+<!-- templates/base.html -->
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-    
+<html>
+  <head>
+    <link rel="stylesheet" href="{{"../../static/css/"+css_file}}">
+    <title>Cafet Ensea</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="icon" type="image/x-icon" href="../../static/utils/icons/cafeteria.png" />
+    <script src="{{"../../static/js/"+js_file}}" ></script>
+
+  </head>
+  <body>
+    <main>{% block content %}{% endblock %}</main>
+    {% extends './components/footer.html' %}
+  </body>
+
+</html>
