--- a/templates/pages/main.html
+++ b/templates/pages/main.html
@@ -1,1 +1,10 @@
-{% extends './components/base.html' %} {% block content %} {% include './components/sidebar.html' %} {% endblock %}
+{% extends 'components/base.html' %}
+{% block content %}
+    <div class="combine">
+        {% include 'components/sidebar.html' %}
+        <div class="charts">
+            {% include 'components/salade.html' %}
+        </div>
+    </div>
+
+{% endblock %}
