add dynamic graphs

--- a/static/css/login.css
+++ b/static/css/login.css
@@ -47,7 +47,7 @@ body{
 
 .form-label{
     font-size: 1.1em ;
-    color: #3a1d00;
+    color: #6A563D !important;
     font-weight: 600;
 }
 .top-image{
