resolve update user data prob

--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -75,7 +75,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="submit"  class="update">Update</button>
+        <input type="submit" value="Update" class="update">
       </div>
     </form>
   </div>
