--- a/templates/components/head.html
+++ b/templates/components/head.html
@@ -8,9 +8,9 @@
     <img class="hovred-img" src="../../static/utils/images/sandwich.jpg" alt="Mountains" />
     <figcaption>Sandwich</figcaption>
   </figure>
-  <figure class="vanoiserie-head">
-    <img class="hovred-img" src="../../static/utils/images/vanoiserie.jpg" alt="Mountains" />
-    <figcaption>Vanoiserie</figcaption>
+  <figure class="viennoiseries-head">
+    <img class="hovred-img" src="../../static/utils/images/viennoiseries.jpg" alt="Mountains" />
+    <figcaption>Viennoiseries</figcaption>
   </figure>
 </div>
 <script src="../../static/js/head.js"></script>
