--- a/templates/components/viennoiseries_details.html
+++ b/templates/components/viennoiseries_details.html
@@ -1,6 +1,6 @@
-<div class="vanoiserie">
+<div class="viennoiseries">
   {% include 'components/head.html' %}
-  <div class="shadow-sm py-2 px-3 vanoiserie-1">
+  <div class="shadow-sm py-2 px-3 viennoiseries-1">
     <div class="d-flex my-2 justify-content-between">
       <h3 class="chart-title">Pain au chocolat</h3>
       <select class="form-select shadow-none select-0">
@@ -13,7 +13,7 @@
       <canvas id="myChart0"></canvas>
     </div>
   </div>
-  <div class="shadow-sm py-2 px-3 vanoiserie-1">
+  <div class="shadow-sm py-2 px-3 viennoiseries-1">
     <div class="d-flex my-2 justify-content-between">
       <h3 class="chart-title">Croissant</h3>
       <select class="form-select shadow-none select-1">
@@ -26,7 +26,7 @@
       <canvas id="myChart1"></canvas>
     </div>
   </div>
-  <div class="shadow-sm py-2 px-3 vanoiserie-1">
+  <div class="shadow-sm py-2 px-3 viennoiseries-1">
     <div class="d-flex my-2 justify-content-between">
       <h3 class="chart-title">Pains suisses</h3>
       <select class="form-select shadow-none select-2">
@@ -41,8 +41,8 @@
   </div>
   
   
-  <link rel="stylesheet" href="../../static/css/vanoiserie.css">
+  <link rel="stylesheet" href="../../static/css/viennoiseries.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="../../static/js/vanoiserie.js"></script>
+  <script src="../../static/js/viennoiseries.js"></script>
     </script>
   
