Fixed bug on navbar

--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -9,7 +9,7 @@
           </h3>
         </div>
         <hr>
-        <ul class="nav px-3 nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
+        <ul class="nav px-3 nav-pills flex-column flex-nowrap mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
           <li class="li-item home">
             <a href="http://127.0.0.1:5000/main-salade" class="url">
               <span class="ms-1 d-none d-sm-inline">Home</span>
@@ -25,7 +25,7 @@
                <span class="ms-1 d-none d-sm-inline">Orders</span></a
             >
           </li>
-          
+        </ul> 
           <div class="dropdown pb-4">
           <hr>
           <a
