add code for new features

--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -21,7 +21,7 @@
             </a>
           </li>
           <li class="li-item orders">
-            <a href="http://127.0.0.1:5000/main" class="url">
+            <a href="http://127.0.0.1:5000/main-orders-salade" class="url">
                <span class="ms-1 d-none d-sm-inline">Orders</span></a
             >
           </li>
