--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -25,6 +25,11 @@
                <span class="ms-1 d-none d-sm-inline">Orders</span></a
             >
           </li>
+          <li class="li-item add">
+            <a href="http://127.0.0.1:5000/main-orders-add" class="url">
+               <span class="ms-1 d-none d-sm-inline">Add</span></a
+            >
+          </li>
         </ul> 
           <div class="dropdown pb-4">
           <hr>
