--- a/templates/components/addOrders_details.html
+++ b/templates/components/addOrders_details.html
@@ -1,10 +1,10 @@
-<div class="salade">
+<div class="salade ">
  
-    <div class="card mask-custom">
-        <div class="card-body p-4 text-white">
+    <div class="card mask-custom shadow">
+        <div class="card-body p-4  ">
     
           <div class="text-center pt-3 pb-2">
-            <h2 class="my-4">Add Your Order</h2>
+            <h2 class="my-4 title">Add Your Order</h2>
           </div>
 
           <form>
@@ -13,106 +13,106 @@
               <div class="col-md-6">
                 <div class="form-group">
                   <span class="form-label">Date</span>
-                  <input class="form-control" type="date" required>
+                  <input class="form-control shadow-none" type="date" required>
                 </div>
               </div>
             </div>
-            <div></div>
-            <div> * Salads </div>
-            <div></div>
+            
+            <div class="sub-title"> * Salads </div>
+            
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
                   <span class="form-label">Salade Thon</span>
-                  <input class="form-control" type="text" value="0">
+                  <input class="form-control shadow-none" type="text" value="0">
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
                   <span class="form-label">Salade Poulet</span>
-                  <input class="form-control" type="text" value="0">
+                  <input class="form-control shadow-none" type="text" value="0">
                 </div>
               </div>
             </div>
-            <div></div>
-            <div> * Sandwichs </div>
-            <div></div>
+            
+            <div class="sub-title"> * Sandwichs </div>
+            
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
                   <span class="form-label">Sandwiches poulet crudités</span>
-                  <input class="form-control" type="text" value="0">
+                  <input class="form-control shadow-none" type="text" value="0">
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
                   <span class="form-label">Sandwiches thon cruditès</span>
-                  <input class="form-control" type="text" value="0">
+                  <input class="form-control shadow-none" type="text" value="0">
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
                   <span class="form-label">Sandwiches végétarien</span>
-                  <input class="form-control" type="text" value="0">
+                  <input class="form-control shadow-none" type="text" value="0">
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
                   <span class="form-label">Sandwiches poulet mexicain</span>
-                  <input class="form-control" type="text" value="0">
+                  <input class="form-control shadow-none" type="text" value="0">
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
                   <span class="form-label">Sandwiches chèvre miel crudités</span>
-                  <input class="form-control" type="text" value="0">
+                  <input class="form-control shadow-none" type="text" value="0">
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
                   <span class="form-label">Sandwiches poulet curry</span>
-                  <input class="form-control" type="text" value="0">
+                  <input class="form-control shadow-none" type="text" value="0">
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
                   <span class="form-label">Sandwiches saumon</span>
-                  <input class="form-control" type="text" value="0">
+                  <input class="form-control shadow-none" type="text" value="0">
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
                   <span class="form-label">Panini 4 fromages</span>
-                  <input class="form-control" type="text" value="0">
+                  <input class="form-control shadow-none" type="text" value="0">
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
                   <span class="form-label">Panini poulet Kebab</span>
-                  <input class="form-control" type="text" value="0">
+                  <input class="form-control shadow-none" type="text" value="0">
                 </div>
               </div>
             </div>
-            <div></div>
-            <div> * Pastries </div>
-            <div></div>
+            
+            <div class="sub-title"> * Pastries </div>
+            
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
                   <span class="form-label">Pain au chocolat</span>
-                  <input class="form-control" type="text" value="0">
+                  <input class="form-control shadow-none" type="text" value="0">
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
                   <span class="form-label">Croissant</span>
-                  <input class="form-control" type="text" value="0">
+                  <input class="form-control shadow-none" type="text" value="0">
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
                   <span class="form-label">Pains suisses</span>
-                  <input class="form-control" type="text" value="0">
+                  <input class="form-control shadow-none" type="text" value="0">
                 </div>
               </div>
             </div>      
@@ -121,7 +121,7 @@
 
           <!-- Bouton "+" pour ajouter une nouvelle ligne -->
           <div class="text-center mt-3">
-            <button onclick="addNewRow()" class="btn btn-add-row"><ion-icon name="add-outline"></ion-icon> Add new order</button>
+            <button onclick="addNewRow()" class="btn  btn-add-row shadow-none"><ion-icon name="add-outline"></ion-icon> Add new order</button>
 
         </div>
     
