--- a/templates/components/sandwichOrders_details.html
+++ b/templates/components/sandwichOrders_details.html
@@ -4,7 +4,7 @@
 
   
     <div class="card mask-custom">
-        <div class="card-body p-4 text-white">
+        <div class="card-body p-4 ">
     
           <div class="text-center pt-3 pb-2">
             <h2 class="my-4">Sandwich's Orders</h2>
