--- a/templates/components/viennoiseriesOrders_details.html
+++ b/templates/components/viennoiseriesOrders_details.html
@@ -2,7 +2,7 @@
   {% include 'components/headOrders.html' %}
 
   <div class="card mask-custom">
-    <div class="card-body p-4 text-white">
+    <div class="card-body p-4 ">
       <div class="text-center pt-3 pb-2">
         <h2 class="my-4">Pastries's Orders</h2>
       </div>
