model added and some translation made

--- a/templates/components/saladeOrders_details.html
+++ b/templates/components/saladeOrders_details.html
@@ -12,7 +12,7 @@
           <div class="table-container">
           <table id="orders-table" class="table text-white mb-0">
             <thead>
-              <tr>
+              <tr class="justify-content-around">
                 <th scope="col">Date</th>
                 <th scope="col">Salade Thon</th>
                 <th scope="col">Salade Poulet</th>
