--- a/templates/components/salade_details.html
+++ b/templates/components/salade_details.html
@@ -5,9 +5,9 @@
     <div class="d-flex my-2 justify-content-between">
       <h3 class="chart-title">Salade Thon</h3>
       <select class="form-select shadow-none salade-ton">
-        <option selected value="week">Week</option>
-        <option value="month">Month</option>
-        <option value="all">All</option>
+        <option selected value="semaine">Semaine</option>
+        <option value="mois">Mois</option>
+        <option value="tout">Tout</option>
       </select>
     </div>
     <div class="d-flex my-2 justify-content-between">
@@ -19,9 +19,9 @@
     <div class="d-flex my-2 justify-content-between">
       <h3 class="chart-title">Salade Poulet</h3>
       <select class="form-select shadow-none salade-poulet">
-        <option selected value="week">Week</option>
-        <option value="month">Month</option>
-        <option value="all">All</option>
+        <option selected value="semaine">Semaine</option>
+        <option value="mois">Mois</option>
+        <option value="tout">Tout</option>
       </select>
     </div>
     <canvas id="myChart1"></canvas>
