--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -16,8 +16,8 @@
             </a>
           </li>
           <li class="li-item predict"> 
-            <a href="http://127.0.0.1:5000/main" data-bs-toggle="collapse" class="url">
-              <span class="ms-1 d-none d-sm-inline">Predict</span>
+            <a href="http://127.0.0.1:5000/predict" class="url">
+              <span class="ms-1 d-none d-sm-inline">Prédire</span>
             </a>
           </li>
           <li class="li-item orders">
