--- a/static/css/salade.css
+++ b/static/css/salade.css
@@ -13,6 +13,10 @@
     color: #f1f1f1;
   }
 
+  .select-0,.select-1,.select-2 {
+    width: 120px;
+  }
+
   .salade {
     background-color: white;
     width: 80vw;
