--- a/templates/components/sandwich_details.html
+++ b/templates/components/sandwich_details.html
@@ -2,24 +2,24 @@
   {% include 'components/head.html' %}
   <div class="shadow-sm py-2 px-3 sandwich-1">
     <div class="d-flex my-2 justify-content-between">
-      <h3 class="chart-title">Sandwiches poulet crudités</h3>
+      <h3 class="chart-title">Sandwichs poulet crudités</h3>
       <select class="form-select shadow-none select-0">
-        <option selected value="week">Week</option>
-        <option value="month">Month</option>
-        <option value="all">All</option>
+        <option selected value="semaine">Semaine</option>
+        <option value="mois">Mois</option>
+        <option value="tout">Tout</option>
       </select>
     </div>
-    <div class="d-flex my-2 justify-content-between">
-      <canvas id="myChart0"></canvas>
+    <div class="">
+      <canvas id="myChart0" ></canvas>
     </div>
   </div>
   <div class="shadow-sm py-2 px-3 sandwich-1">
     <div class="d-flex my-2 justify-content-between">
-      <h3 class="chart-title">Sandwiches thon cruditès</h3>
+      <h3 class="chart-title">Sandwichs thon crudités</h3>
       <select class="form-select shadow-none select-1">
-        <option selected value="week">Week</option>
-        <option value="month">Month</option>
-        <option value="all">All</option>
+        <option selected value="semaine">Semaine</option>
+        <option value="mois">Mois</option>
+        <option value="tout">Tout</option>
       </select>
     </div>
     <div class="d-flex my-2 justify-content-between">
@@ -28,11 +28,11 @@
   </div>
   <div class="shadow-sm py-2 px-3 sandwich-1">
     <div class="d-flex my-2 justify-content-between">
-      <h3 class="chart-title">Sandwiches végétarien</h3>
+      <h3 class="chart-title">Sandwichs végétarien</h3>
       <select class="form-select shadow-none select-2">
-        <option selected value="week">Week</option>
-        <option value="month">Month</option>
-        <option value="all">All</option>
+        <option selected value="semaine">Semaine</option>
+        <option value="mois">Mois</option>
+        <option value="tout">Tout</option>
       </select>
     </div>
     <div class="d-flex my-2 justify-content-between">
@@ -41,11 +41,11 @@
   </div>
   <div class="shadow-sm py-2 px-3 sandwich-1">
     <div class="d-flex my-2 justify-content-between">
-      <h3 class="chart-title">Sandwiches poulet mexicain</h3>
+      <h3 class="chart-title">Sandwichs poulet mexicain</h3>
       <select class="form-select shadow-none select-3">
-        <option selected value="week">Week</option>
-        <option value="month">Month</option>
-        <option value="all">All</option>
+        <option selected value="semaine">Semaine</option>
+        <option value="mois">Mois</option>
+        <option value="tout">Tout</option>
       </select>
     </div>
     <div class="d-flex my-2 justify-content-between">
@@ -54,11 +54,11 @@
   </div>
   <div class="shadow-sm py-2 px-3 sandwich-1">
     <div class="d-flex my-2 justify-content-between">
-      <h3 class="chart-title">Sandwiches chèvre miel crudités</h3>
+      <h3 class="chart-title">Sandwichs chèvre miel crudités</h3>
       <select class="form-select shadow-none select-4">
-        <option selected value="week">Week</option>
-        <option value="month">Month</option>
-        <option value="all">All</option>
+        <option selected value="semaine">Semaine</option>
+        <option value="mois">Mois</option>
+        <option value="tout">Tout</option>
       </select>
     </div>
     <div class="d-flex my-2 justify-content-between">
@@ -67,11 +67,11 @@
   </div>
   <div class="shadow-sm py-2 px-3 sandwich-1">
     <div class="d-flex my-2 justify-content-between">
-      <h3 class="chart-title">Sandwiches poulet curry</h3>
+      <h3 class="chart-title">Sandwichs poulet curry</h3>
       <select class="form-select shadow-none select-5">
-        <option selected value="week">Week</option>
-        <option value="month">Month</option>
-        <option value="all">All</option>
+        <option selected value="semaine">Semaine</option>
+        <option value="mois">Mois</option>
+        <option value="tout">Tout</option>
       </select>
     </div>
     <div class="d-flex my-2 justify-content-between">
@@ -80,11 +80,11 @@
   </div>
   <div class="shadow-sm py-2 px-3 sandwich-1">
     <div class="d-flex my-2 justify-content-between">
-      <h3 class="chart-title">Sandwiches saumon</h3>
+      <h3 class="chart-title">Sandwichs saumon</h3>
       <select class="form-select shadow-none select-6">
-        <option selected value="week">Week</option>
-        <option value="month">Month</option>
-        <option value="all">All</option>
+        <option selected value="semaine">Semaine</option>
+        <option value="mois">Mois</option>
+        <option value="tout">Tout</option>
       </select>
     </div>
     <div class="d-flex my-2 justify-content-between">
@@ -95,9 +95,9 @@
     <div class="d-flex my-2 justify-content-between">
       <h3 class="chart-title">Panini 4 fromages</h3>
       <select class="form-select shadow-none select-7">
-        <option selected value="week">Week</option>
-        <option value="month">Month</option>
-        <option value="all">All</option>
+        <option selected value="semaine">Semaine</option>
+        <option value="mois">Mois</option>
+        <option value="tout">Tout</option>
       </select>
     </div>
     <div class="d-flex my-2 justify-content-between">
@@ -108,9 +108,9 @@
     <div class="d-flex my-2 justify-content-between">
       <h3 class="chart-title">Panini poulet Kebab</h3>
       <select class="form-select shadow-none select-8">
-        <option selected value="week">Week</option>
-        <option value="month">Month</option>
-        <option value="all">All</option>
+        <option selected value="semaine">Semaine</option>
+        <option value="mois">Mois</option>
+        <option value="tout">Tout</option>
       </select>
     </div>
     <div class="d-flex my-2 justify-content-between">
