--- a/templates/components/viennoiseries_details.html
+++ b/templates/components/viennoiseries_details.html
@@ -4,9 +4,9 @@
     <div class="d-flex my-2 justify-content-between">
       <h3 class="chart-title">Pain au chocolat</h3>
       <select class="form-select shadow-none select-0">
-        <option selected value="week">Week</option>
-        <option value="month">Month</option>
-        <option value="all">All</option>
+        <option selected value="semaine">Semaine</option>
+        <option value="mois">Mois</option>
+        <option value="tout">Tout</option>
       </select>
     </div>
     <div class="d-flex my-2 justify-content-between">
@@ -17,9 +17,9 @@
     <div class="d-flex my-2 justify-content-between">
       <h3 class="chart-title">Croissant</h3>
       <select class="form-select shadow-none select-1">
-        <option selected value="week">Week</option>
-        <option value="month">Month</option>
-        <option value="all">All</option>
+        <option selected value="semaine">Semaine</option>
+        <option value="mois">Mois</option>
+        <option value="tout">Tout</option>
       </select>
     </div>
     <div class="d-flex my-2 justify-content-between">
@@ -30,9 +30,9 @@
     <div class="d-flex my-2 justify-content-between">
       <h3 class="chart-title">Pains suisses</h3>
       <select class="form-select shadow-none select-2">
-        <option selected value="week">Week</option>
-        <option value="month">Month</option>
-        <option value="all">All</option>
+        <option selected value="semaine">Semaine</option>
+        <option value="mois">Mois</option>
+        <option value="tout">Tout</option>
       </select>
     </div>
     <div class="d-flex my-2 justify-content-between">
