--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -20,7 +20,11 @@
               <span class="ms-1 d-none d-sm-inline">Prédire</span>
             </a>
           </li>
-          
+          <li class="li-item predict"> 
+            <a href="http://127.0.0.1:5000/correlation"  class="url">
+              <span class="ms-1 d-none d-sm-inline">Corrélation</span>
+            </a>
+          </li>
           <li class="li-item orders">
             <a href="http://127.0.0.1:5000/main-orders-salade" class="url">
                <span class="ms-1 d-none d-sm-inline">Orders</span></a
@@ -44,14 +48,14 @@
             <span class="d-none d-sm-inline mx-1">Admin</span>
           </a>
           <ul class="dropdown-menu  text-small shadow">
-            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Settings</a></li>
+            <!-- <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Settings</a></li>
             <li>
               <hr class="dropdown-divider" />
             </li>
-            <li><a class="dropdown-item update-model" >Update modale</a></li>
-            <li>
+            <li><a class="dropdown-item update-model" >Update modale</a></li> -->
+            <!-- <li>
               <hr class="dropdown-divider" />
-            </li>
+            </li> -->
             <li><a class="dropdown-item" href="http://127.0.0.1:5000/logout">Sign out</a></li>
           </ul>
         
