--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -1,6 +1,6 @@
 {% extends './components/base.html' %} {% block content %}
 <div class="content">
-  <img src="../../static/utils/images/image.jpg" class="side-image" />
+  <img src="../../static/utils/images/image.jpeg" class="side-image" />
   <form method="post" action="http://127.0.0.1:5000/" class="login-form">
     <div class="left">
       <img src="../../static/utils/images/cafe.png" class="top-image" />
